src/stylesheet.scss
$max-width: 900px;

@keyframes rotate {
  from {
    transform: rotate(0);
  }
  to {
    transform: rotate(360deg);
  }
}

* {
  box-sizing: border-box;
}

html {
  font-family: "Inter", sans-serif;
  font-size: 18px;
}

body {
  color: #343a40;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0;
  padding: 100px 50px;
  width: 100%;
}

p {
  line-height: 28px;
  margin: 8px 0;
}

h2 {
  font-size: 20px;
  margin: 16px 0;
}

header {
  display: flex;
  align-items: center;
  font-family: "HK Grotesk", sans-serif;
  margin-bottom: 80px;
  max-width: $max-width;
  width: 100%;
}

header .title {
  font-size: 28px;
  font-weight: 700;
  margin: 0;
}

header .logo {
  border-radius: 50%;
  height: 72px;
  width: 72px;
  margin-right: 28px;
}

header .description {
  color: #5a5a5a;
  font-family: Inter;
  font-size: 20px;
  margin: 4px 0;
  font-weight: 450;
}

img.lazyImage {
  opacity: 0;
  transition: opacity 150ms ease-in-out;
  &.isVisible {
    opacity: 1;
  }
}

section {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  max-width: $max-width;
  margin-bottom: 60px;
}

.metadata__content {
  display: grid;
  grid-template-columns: 300px 1fr;
  gap: 48px;
  margin: 8px 0;
}

.metadata__cover {
  border-radius: 8px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  position: relative;
  overflow: hidden;
  width: 300px;
  height: auto;
  flex-shrink: 0;

  > div {
    position: absolute;
    top: 0;
    height: 100%;
    width: 100%;
    transform: translateX(100%);
    transition: transform 250ms ease-in-out;

    &.isActive {
      transform: translateX(0);
    }
    &.isComplete {
      transform: translateX(-100%);
    }
  }

  img {
    height: 100%;
    width: 100%;
  }
}

.metadata__status {
  display: flex;
  flex-direction: column;
  flex-grow: 0;
  justify-content: center;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

.metadata__title {
  font-size: 28px;
  font-weight: 600;
  margin: 0;
  overflow: hidden;
  white-space: nowrap;
}

.metadata__artist {
  font-size: 22px;
  font-weight: 400;
  margin: 4px 0 0;
}

.progressBar {
  display: flex;
  align-items: center;
  height: 16px;
  position: relative;
}

.progressBar::after {
  content: "";
  position: absolute;
  top: 7px;
  right: 0;
  left: 0;
  background: #f0f0f0;
  border-radius: 2px;
  height: 2px;
  z-index: -1;
}

.progressBar__fill {
  background: #cfcfcf;
  border-radius: 2px;
  height: 4px;
  position: relative;
  transition: background 100ms ease-in-out;
  &:focus-visible {
    outline: none;
  }
}

.progressBar__fill.active {
  background: #0071eb;
}

.progressBar:hover .progressBar__fill.draggable::after,
.progressBar__fill.draggable.dragging::after,
.progressBar__fill.draggable:focus-visible::after {
  background: inherit;
  border-radius: 50%;
  content: "";
  position: absolute;
  right: -4px;
  top: -2px;
  width: 8px;
  height: 8px;
}

.metadata__progress {
  margin: 24px 0;
}

.metadata__time {
  color: #585858;
  display: flex;
  font-size: 12px;
  justify-content: space-between;
  margin-top: 10px;
}

.metadata__controls {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 var(--viewport-margin);
}

.metadata__controls svg {
  width: 20px;
  height: 20px;
}

/* ListenButton */

.listenButton {
  background: #0071eb;
  border: none;
  border-radius: 4px;
  color: white;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex: 0;
  font-family: "HK Grotesk", sans-serif;
  font-size: 12px;
  font-weight: 700;
  height: 32px;
  padding: 8px 12px 8px 8px;
  width: fit-content;
}

.listenButton svg {
  width: 16px;
  height: 16px;
  margin-right: 6px;
}

.listenButton svg.loading {
  animation: rotate 1s linear infinite;
}

/* VolumeControl */

.volumeControl {
  display: flex;
  justify-content: center;
  align-items: center;
}

.volumeControl button {
  justify-content: flex-start;
}

.volumeControl__icon {
  background: transparent;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  margin-right: 2px;
  width: 32px;
  height: 22px;
}

.volumeControl .progressBar {
  cursor: pointer;
}

.about__ios {
  margin: 16px 0 0;

  a {
    display: inline-block;
  }
}

.contact a,
.contact a:visited {
  color: inherit;
  text-decoration: none;
}

.contact ul {
  display: flex;
  gap: 24px;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

footer {
  color: #aaaaaa;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  justify-content: space-between;
  max-width: $max-width;
  width: 100%;
}

@media screen and (max-width: 768px) {
  body {
    padding: 50px 25px;
  }

  header {
    margin-bottom: 60px;
  }

  header .logo {
    border-radius: 50%;
    height: 48px;
    width: 48px;
    margin-right: 16px;
  }

  header .title {
    font-size: 22px;
  }

  header .description {
    font-size: 14px;
    margin: 0;
  }

  .metadata__content {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .metadata__title {
    font-size: 24px;
  }

  .metadata__artist {
    font-size: 18px;
  }
}

